tests/ui/repr/repr-transparent-array.stderr
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:17:22
   |
LL | pub struct T5(Sized, SusArray);
   |                      ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:22:15
   |
LL | pub struct T6(SusArray, Sized);
   |               ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:27:19
   |
LL | pub struct T7(T1, SusArray); // still wrong, even when the array is hidden inside another type
   |                   ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:32:25
   |
LL | pub struct T8(SusArray, SusArray); // still wrong
   |                         ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:37:29
   |
LL | pub struct T9([[u8; 0]; 0], SusArray); // still wrong
   |                             ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>

error: aborting due to 5 previous errors

Future incompatibility report: Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:17:22
   |
LL | pub struct T5(Sized, SusArray);
   |                      ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:22:15
   |
LL | pub struct T6(SusArray, Sized);
   |               ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:27:19
   |
LL | pub struct T7(T1, SusArray); // still wrong, even when the array is hidden inside another type
   |                   ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:32:25
   |
LL | pub struct T8(SusArray, SusArray); // still wrong
   |                         ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: zero-sized fields in `repr(transparent)` cannot contain array types with non-trivial element types
  --> $DIR/repr-transparent-array.rs:37:29
   |
LL | pub struct T9([[u8; 0]; 0], SusArray); // still wrong
   |                             ^^^^^^^^
   |
   = note: this field contains `[u8; 0]`, which is an array with a non-trivial element type, so it is not guaranteed to have a trivial ABI in all situations.
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #78586 <https://github.com/rust-lang/rust/issues/78586>
note: the lint level is defined here
  --> $DIR/repr-transparent-array.rs:1:9
   |
LL | #![deny(repr_transparent_non_zst_fields)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

